--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,1 +1,12 @@
-<h1>Hello</h1>
+{% extends "main/base.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+<h1 class="text-4xl font-bold text-center text-blue-600">
+    Welcome to My Portfolio
+</h1>
+<p class="text-center text-gray-700 mt-4">
+    Built with Django + Tailwind 🚀
+</p>
+{% endblock %}
