--- a/main/templates/main/projects.html
+++ b/main/templates/main/projects.html
@@ -1,4 +1,5 @@
-{% extends "main/base.html" %}
+{% extends "base.html" %}
+{% load static %}
 
 {% block title %}Projects{% endblock %}
 
@@ -10,8 +11,8 @@
 <ul>
     {% for project in projects %}
         <li>
-            <h3>{{ project.title }}</h3>
-            <p>{{ project.description }}</p>
+            <h3 class="text-xl rounded-xl bg-blue-500 mx-4 text-center">{{ project.title }}</h3>
+            <p class="text-center">{{ project.description }}</p>
             {% if project.link %}
                 <a href="{{ project.link }}" target="_blank">View Project</a>
             {% endif %}
