--- a/main/templates/main/projects.html
+++ b/main/templates/main/projects.html
@@ -4,21 +4,49 @@
 {% block title %}Projects{% endblock %}
 
 {% block content %}
-<h1 class="text-4xl font-bold text-center text-blue-600">
+{% comment %} <h1 class="text-4xl font-bold text-center text-blue-600">
     Welcome to My Projects Page
-</h1>
+</h1> {% endcomment %}
 
-<ul>
+<div class="container mx-auto px-4 py-8">
+  <h1 class="text-3xl italic font-bold mb-8 text-center drop-shadow-xl/50 drop-shadow-blue-500 text-blue-600">Welcome to My Projects Page</h1>
+
+  <!-- Projects Grid -->
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 drop-shadow-xl/50 drop-shadow-blue-500">
     {% for project in projects %}
-        <li>
-            <h3 class="text-xl rounded-xl bg-blue-500 mx-4 text-center">{{ project.title }}</h3>
-            <p class="text-center">{{ project.description }}</p>
-            {% if project.link %}
-                <a href="{{ project.link }}" target="_blank">View Project</a>
-            {% endif %}
-        </li>
-    {% empty %}
-        <p>No projects added yet.</p>
+      <div class="bg-gray-800 shadow-2xl rounded-lg p-6 flex flex-col justify-between">
+        <!-- Title -->
+        <h2 class="text-xl text-white font-semibold mb-2 hover:text-blue-400">{{ project.title }}</h2>
+
+        <!-- Description -->
+        <p class="text-white flex-grow">
+          {{ project.description }}
+        </p>
+        <!-- Tags -->
+        <div class="mb-4 flex flex-wrap gap-2">
+            {% for tag in project.tag_list %}
+                <span class="bg-blue-100 text-blue-800 text-sm font-medium px-2.5 py-0.5 rounded">
+                {{ tag }}
+                </span>
+            {% endfor %}
+        </div>
+
+        <!-- Buttons -->
+        <div class="mt-4 flex space-x-4">
+          <a href="#" 
+             class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition">
+             Live Demo
+          </a>
+          {% if project.github_link %}
+          <a href="{{ project.github_link }}" target="_blank" 
+             class="bg-green-800 text-white px-4 py-2 rounded hover:bg-green-900 transition">
+             GitHub
+          </a>
+          {% endif %}
+        </div>
+      </div>
     {% endfor %}
-</ul>
+  </div>
+</div>
+
 {% endblock %}
