--- a/templates/base.html
+++ b/templates/base.html
@@ -6,35 +6,34 @@
     <title>{% block title %}My Portfolio{% endblock %}</title>
     {% comment %} <script src="https://cdn.tailwindcss.com"></script> {% endcomment %}
     <link rel="stylesheet" href="{% static 'dist/style.css' %}">
-
 </head>
 <body>
     <!-- Navbar -->
     <nav class="bg-gray-900 text-white">
         <div class="container mx-auto grid grid-cols-3 items-center p-4">
             <!-- Left: Brand -->
-            <a href="{% url 'home' %}" class="italic text-3xl text-blue-400 font-semibold hover:text-gray-300">
-            My Portfolio
+            <a href="{% url 'home' %}" class="animate-pulse italic text-3xl text-blue-400 font-semibold hover:text-gray-300 drop-shadow-xl/50 drop-shadow-blue-500">
+            Portfolio
             </a>
             <!-- Center: Logo -->
             <div class="flex justify-center">
                 <a href="{% url 'home' %}">
-                    <img src="{% static 'logo.png' %}" class="h-12 w-12 object-contain mix-blend-screen hover:bg-blue-500 rounded-full">
+                    <img src="{% static 'logo.png' %}" class="animate-spin h-12 w-12 object-contain mix-blend-screen bg-blue-500 rounded-full drop-shadow-xl/50 drop-shadow-blue-500">
                 </a>
             </div>
             <!-- Right: Links -->
             <div class="flex justify-end space-x-6">
                 <a href="{% url 'home' %}" 
-                    class="italic hover:text-blue-400 {% if request.path == '/' %}text-blue-400 font-semibold{% endif %}">
+                    class="italic hover:text-blue-400 {% if request.path == '/' %}text-blue-400 font-semibold animate-pulse{% endif %}">
                     Home
                 </a>
                 <!-- Left: Links / GitHub -->
                 <a href="{% url 'about' %}" 
-                    class="italic hover:text-blue-400 {% if request.path == '/about/' %}text-blue-400 font-semibold{% endif %}">
+                    class="italic hover:text-blue-400 {% if request.path == '/about/' %}text-blue-400 font-semibold animate-pulse{% endif %}">
                     About
                 </a>
                 <a href="{% url 'projects' %}" 
-                    class="italic hover:text-blue-400 {% if request.path == '/projects/' %}text-blue-400 font-semibold{% endif %}">
+                    class="italic hover:text-blue-400 {% if request.path == '/projects/' %}text-blue-400 font-semibold animate-pulse{% endif %}">
                     Projects
                 </a>
                 <a href="https://github.com/Avipatel1" target="_blank" class="italic hover:text-blue-400">
@@ -51,7 +50,7 @@
     {% endblock %}
 
     <hr>
-    <footer>
+    <footer class="bg-gray-900 text-white">
         <p>&copy; 2025 Avi Patel</p>
     </footer>
 </body>
